# Taskview

./: .gitignore  LICENSE  README.md  pyproject.toml
taskview/: cli.py
taskview/src/: taskview.py
tests/: test_taskview.py
